--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,7 @@
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
+                    <encoding>utf-8</encoding>
                 </configuration>
             </plugin>
 
