--- a/src/main/resources/c3p0.properties
+++ b/src/main/resources/c3p0.properties
@@ -6,7 +6,7 @@ c3p0.password=builder
 #c3p0.driverClass=com.mysql.jdbc.Driver
 #c3p0.jdbcUrl=jdbc:mysql://127.0.0.1:3306/datastory
 #c3p0.user=root
-#c3p0.password=builder
+#c3p0.password=123456
 
 #阿里云环境
 #c3p0.driverClass=com.mysql.jdbc.Driver
