--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,11 @@
             <artifactId>httpclient</artifactId>
             <version>4.3.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>us.codecraft</groupId>
+            <artifactId>webmagic-core</artifactId>
+            <version>0.5.3</version>
+        </dependency>
     </dependencies>
 
     <build>
