添加多个政务微信监控账号

--- a/src/main/resources/account.properties
+++ b/src/main/resources/account.properties
@@ -1,5 +1,9 @@
-#emailOrPhone=2108930@qq.com
-#pwd=ywisajax
+#政务和其他
+username=18275261274
+password=gengyun123
 
-username=18684117027
-password=ywisajax
+#username=18285115834
+#password=zhang0524
+
+#username=2108930@qq.com
+#password=ywisajax
