同步线上代码，完成手机版榜单

--- a/src/main/resources/c3p0.properties
+++ b/src/main/resources/c3p0.properties
@@ -4,13 +4,19 @@
 #c3p0.password=builder
 
 #本地环境
-c3p0.driverClass=com.mysql.jdbc.Driver
-c3p0.jdbcUrl=jdbc:mysql://127.0.0.1:3306/datastory
-c3p0.user=root
-c3p0.password=builder
+#c3p0.driverClass=com.mysql.jdbc.Driver
+#c3p0.jdbcUrl=jdbc:mysql://127.0.0.1:3306/datastory
+#c3p0.user=root
+#c3p0.password=builder
 
-#阿里云环境
+#阿里云环境1
 #c3p0.driverClass=com.mysql.jdbc.Driver
 #c3p0.jdbcUrl=jdbc:mysql://rdswil9ejdub6yl6lj5dy.mysql.rds.aliyuncs.com:3306/datastory_1?useUnicode=true&amp;characterEncoding=UTF-8
 #c3p0.user=lhj
 #c3p0.password=lhj123
+
+#阿里云环境2
+c3p0.driverClass=com.mysql.jdbc.Driver
+c3p0.jdbcUrl=jdbc:mysql://120.55.114.237:3306/datastory_1?useUnicode=true&amp;characterEncoding=UTF-8
+c3p0.user=root
+c3p0.password=HfrVvHu1AZnc
